lib/tests/fixtures/compiler/evaluation/bad_capture_param_type.pp
function foo($x, Array[String] *$y) {

}

foo(bar, 1, 2 ,3)
